--- a/StudyiOS/Content/ViewController/PrisonBreakViewController/PrisonBreakViewController.xib
+++ b/StudyiOS/Content/ViewController/PrisonBreakViewController/PrisonBreakViewController.xib
@@ -1,22 +1,91 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PrisonBreakViewController">
             <connections>
+                <outlet property="btn1" destination="loi-DG-Qie" id="QPr-QD-vSb"/>
+                <outlet property="btn2" destination="vVY-v7-lYf" id="toB-hE-GSb"/>
+                <outlet property="btn3" destination="98T-jf-h4h" id="fap-b1-DVT"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="loi-DG-Qie">
+                    <rect key="frame" x="10" y="69" width="111" height="50"/>
+                    <color key="backgroundColor" systemColor="systemYellowColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="I7R-HK-K7f"/>
+                    </constraints>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                    <state key="normal" title="方法一">
+                        <color key="titleColor" systemColor="systemPinkColor"/>
+                    </state>
+                    <connections>
+                        <action selector="btnClick:" destination="-1" eventType="touchUpInside" id="hDR-xW-bzw"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vVY-v7-lYf">
+                    <rect key="frame" x="141" y="69" width="111" height="50"/>
+                    <color key="backgroundColor" systemColor="systemYellowColor"/>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                    <state key="normal" title="方法二">
+                        <color key="titleColor" systemColor="systemPinkColor"/>
+                    </state>
+                    <connections>
+                        <action selector="btnClick:" destination="-1" eventType="touchUpInside" id="0N7-WF-m6i"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="98T-jf-h4h">
+                    <rect key="frame" x="272" y="69" width="111" height="50"/>
+                    <color key="backgroundColor" systemColor="systemYellowColor"/>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                    <state key="normal" title="方法三">
+                        <color key="titleColor" systemColor="systemPinkColor"/>
+                    </state>
+                    <connections>
+                        <action selector="btnClick:" destination="-1" eventType="touchUpInside" id="SHS-u7-9TD"/>
+                    </connections>
+                </button>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="98T-jf-h4h" firstAttribute="height" secondItem="vVY-v7-lYf" secondAttribute="height" id="2co-Mu-3n1"/>
+                <constraint firstItem="98T-jf-h4h" firstAttribute="leading" secondItem="vVY-v7-lYf" secondAttribute="trailing" constant="20" id="5Yu-8E-cAt"/>
+                <constraint firstItem="vVY-v7-lYf" firstAttribute="centerY" secondItem="loi-DG-Qie" secondAttribute="centerY" id="NCi-bC-qSh"/>
+                <constraint firstItem="vVY-v7-lYf" firstAttribute="leading" secondItem="loi-DG-Qie" secondAttribute="trailing" constant="20" id="Wrg-Et-0Wu"/>
+                <constraint firstItem="loi-DG-Qie" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="10" id="hUY-QD-wHj"/>
+                <constraint firstItem="vVY-v7-lYf" firstAttribute="height" secondItem="loi-DG-Qie" secondAttribute="height" id="jIB-Qd-Ego"/>
+                <constraint firstItem="loi-DG-Qie" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="10" id="m7y-rM-EBn"/>
+                <constraint firstItem="vVY-v7-lYf" firstAttribute="width" secondItem="loi-DG-Qie" secondAttribute="width" id="sV9-xE-moH"/>
+                <constraint firstItem="98T-jf-h4h" firstAttribute="centerY" secondItem="vVY-v7-lYf" secondAttribute="centerY" id="tj4-it-kUw"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="98T-jf-h4h" secondAttribute="trailing" constant="10" id="wxh-IR-VNy"/>
+                <constraint firstItem="98T-jf-h4h" firstAttribute="width" secondItem="vVY-v7-lYf" secondAttribute="width" id="yfg-VZ-UlT"/>
+            </constraints>
+            <point key="canvasLocation" x="137" y="15"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
