--- a/StudyiOS/Content/ViewController/TimerViewController/TimerViewController.xib
+++ b/StudyiOS/Content/ViewController/TimerViewController/TimerViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,30 +11,57 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TimerViewController">
             <connections>
-                <outlet property="testLab" destination="wSH-Fg-r1t" id="BDq-aE-gSN"/>
+                <outlet property="testLab" destination="zga-RW-UEB" id="Tcd-Cu-lmP"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wSH-Fg-r1t">
-                    <rect key="frame" x="0.0" y="48" width="414" height="20.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JoU-gL-rjF">
+                    <rect key="frame" x="0.0" y="59" width="430" height="839"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LdA-E0-QkD">
+                            <rect key="frame" x="0.0" y="0.0" width="430" height="20.333333333333332"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zga-RW-UEB">
+                                    <rect key="frame" x="0.0" y="0.0" width="430" height="20.333333333333332"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="zga-RW-UEB" firstAttribute="top" secondItem="LdA-E0-QkD" secondAttribute="top" id="0Yi-df-l2I"/>
+                                <constraint firstAttribute="bottom" secondItem="zga-RW-UEB" secondAttribute="bottom" id="4qw-lF-wu9"/>
+                                <constraint firstItem="zga-RW-UEB" firstAttribute="leading" secondItem="LdA-E0-QkD" secondAttribute="leading" id="6lb-B3-aq7"/>
+                                <constraint firstAttribute="trailing" secondItem="zga-RW-UEB" secondAttribute="trailing" id="TgP-B7-ah4"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="LdA-E0-QkD" firstAttribute="leading" secondItem="JoU-gL-rjF" secondAttribute="leading" id="NI0-PJ-0pe"/>
+                        <constraint firstItem="LdA-E0-QkD" firstAttribute="top" secondItem="JoU-gL-rjF" secondAttribute="top" id="OYN-3f-K5l"/>
+                        <constraint firstAttribute="trailing" secondItem="LdA-E0-QkD" secondAttribute="trailing" id="jhY-EV-iNg"/>
+                        <constraint firstItem="LdA-E0-QkD" firstAttribute="centerX" secondItem="JoU-gL-rjF" secondAttribute="centerX" id="ofu-Fr-hD4"/>
+                        <constraint firstAttribute="bottom" secondItem="LdA-E0-QkD" secondAttribute="bottom" id="wEN-CH-Agu"/>
+                    </constraints>
+                    <viewLayoutGuide key="contentLayoutGuide" id="UCC-Tu-kg4"/>
+                    <viewLayoutGuide key="frameLayoutGuide" id="5e9-kf-Z4K"/>
+                </scrollView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="wSH-Fg-r1t" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="18N-f5-0TO"/>
-                <constraint firstItem="wSH-Fg-r1t" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="lM4-3d-fwu"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="wSH-Fg-r1t" secondAttribute="trailing" id="tUa-M4-9dl"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="JoU-gL-rjF" secondAttribute="bottom" id="0uz-KQ-mJY"/>
+                <constraint firstItem="JoU-gL-rjF" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="1hQ-8I-ioz"/>
+                <constraint firstItem="JoU-gL-rjF" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="AMp-by-hae"/>
+                <constraint firstItem="JoU-gL-rjF" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="CBT-kV-Ha0"/>
+                <constraint firstItem="JoU-gL-rjF" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="zpO-qN-JCK"/>
             </constraints>
-            <point key="canvasLocation" x="137.68115942028987" y="78.348214285714278"/>
+            <point key="canvasLocation" x="136.74418604651163" y="77.896995708154506"/>
         </view>
     </objects>
     <resources>
