--- a/StudyiOS/Content/ViewController/TryCatchViewController/TryCatchViewController.xib
+++ b/StudyiOS/Content/ViewController/TryCatchViewController/TryCatchViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -21,20 +21,28 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kzf-JO-KlK">
-                    <rect key="frame" x="146.66666666666666" y="59" width="100" height="100"/>
+                    <rect key="frame" x="146.66666666666666" y="69" width="100" height="100"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="3FF-0A-isD"/>
                         <constraint firstAttribute="width" secondItem="Kzf-JO-KlK" secondAttribute="height" id="W3S-di-wyn"/>
                     </constraints>
                 </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="测试崩溃,点击上面的图片, 但是第一次可以挽救，点击第二次直接卡死点不动。" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bfh-ND-1XN">
+                    <rect key="frame" x="10" y="189" width="373" height="38.333333333333343"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="bfh-ND-1XN" firstAttribute="top" secondItem="Kzf-JO-KlK" secondAttribute="bottom" constant="20" id="0el-kp-QzW"/>
                 <constraint firstItem="Kzf-JO-KlK" firstAttribute="centerX" secondItem="Q5M-cg-NOt" secondAttribute="centerX" id="5FB-A4-CuA"/>
-                <constraint firstItem="Kzf-JO-KlK" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="6iW-pD-BCe"/>
+                <constraint firstItem="Kzf-JO-KlK" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="10" id="6iW-pD-BCe"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="bfh-ND-1XN" secondAttribute="trailing" constant="10" id="CqE-WA-1Gb"/>
+                <constraint firstItem="bfh-ND-1XN" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="10" id="r1g-QG-Kh1"/>
             </constraints>
-            <point key="canvasLocation" x="138" y="21"/>
+            <point key="canvasLocation" x="136.64122137404578" y="20.422535211267608"/>
         </view>
     </objects>
     <resources>
